# Aiogram-Base-App

./: .env  .env-template  .gitignore  Dockerfile  README.md  README.ru.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: config.py
app/core/: db_manager.py
app/core/models/: base.py  user.py
app/core/models/mixins/: timestamp.py
app/core/schemas/: user.py
app/handlers/: commands.py
app/middlewares/: __init__.py  session_dep.py  texts_dep.py
app/repository/: __init__.py  abstract.py  base.py  user.py
app/utils/: constants.py  enum.py  logger.py  texts.py  types.py
docs/: README.ru.md
migrations/: env.py
migrations/versions/: 2025_06_04_0014-605ed077609e_init_migration.py  2025_06_04_2243-0cca844f9685_init_migration.py  2025_06_05_0005-416be42c7674_init_migration.py  2025_06_05_1006-1d75a22bd5e5_init_migration.py
src/: config.py
src/core/: __init__.py  db_manager.py
src/core/models/: __init__.py  base.py  user.py
src/core/models/mixins/: __init__.py
src/core/schemas/: __init__.py
src/handlers/: commands.py
src/middlewares/: session_dep.py  texts_dep.py
src/repository/: abstract.py  base.py  user.py
src/utils/: logger.py  texts.py
tests/: config.py  conftest.py  test_handlers.py
tests/integration_tests/: utils.py
tests/integration_tests/mock_data/: users.json
tests/integration_tests/test_handlers/: test_command_start.py
texts/: en.json  welcome-message.txt
