[tool.poetry]
package-mode = false


[tool.poetry.dependencies]
python = ">=3.12"
aiogram = "^3.20.0.post0"
sqlalchemy = {extras = ["asyncio", "mypy"], version = "^2.0.41"}
asyncpg = "^0.30.0"
alembic = "^1.16.1"
pydantic-settings = "^2.9.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.16.0"
ruff = "^0.11.12"
pre-commit = "^4.2.0"

[tool.mypy]
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]