[tool.poetry]
package-mode = false


[tool.poetry.dependencies]
python = ">=3.12"
aiogram = "^3.20.0.post0"
sqlalchemy = {extras = ["asyncio", "mypy"], version = "^2.0.41"}
asyncpg = "^0.30.0"
alembic = "^1.16.1"
pydantic-settings = "^2.9.1"
pydantic = "^2.11.5"
redis = "^6.2.0"
aiofiles = "^24.1.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.16.0"
ruff = "^0.11.12"
pre-commit = "^4.2.0"
types-aiofiles = "^24.1.0.20250516"
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"

[tool.mypy]
strict = true
warn_unreachable = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "truthy-bool", "redundant-expr"]
strict_bytes = true
local_partial_types = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "UP031" # printf
]

[tool.ruff.lint.per-file-ignores]
"migrations/versions/*.py" = ["W291"] # ignore trailing-whitespace in alembic autogenerate migrations